--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,13 @@
       <artifactId>rest-assured</artifactId>
       <version>5.5.0</version>
       </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.10.2</version>
+    </dependency>
+
   </dependencies>
 </project>
